「引越し」の表記を「引越」に変更

--- a/src/about.html
+++ b/src/about.html
@@ -190,8 +190,8 @@
                 <div class="lower__textInner">
                     <div data-anime="initial-slideVisible" class="lower__textInner--title PinkBg"><p><span>引越はおもしろい！</span></p></div>
                     <p class="lower__textInner--text">そんな想いを胸にサービスを<br class="sp-br">お届けしている当社ですが、<br>
-                        引越し作業が楽しい！だけではなく、<br>
-                        引越しをすることで皆様の人生に<br class="sp-br">変化をもたらせ、<br class="pc-br">
+                        引越作業が楽しい！だけではなく、<br>
+                        引越をすることで皆様の人生に<br class="sp-br">変化をもたらせ、<br class="pc-br">
                         環境の変化が<br class="sp-br">新たな出逢いや発見に繋がる・・・<br>
                         そんな願いを持って業務にあたっております。
                     </p>
@@ -228,7 +228,7 @@
                     </div>
                     <p class="point__grid--title">日本一小さな引越屋</p>
                     <div class="point__grid--text">
-                        <p>東京23区近郊を中心とし、千葉・神奈川・埼玉エリアの引越しを行っています。</p>
+                        <p>東京23区近郊を中心とし、千葉・神奈川・埼玉エリアの引越を行っています。</p>
                     </div>
                 </div>
                 <div class="point__grid--item popup__text">
@@ -246,7 +246,7 @@
                     </div>
                     <p class="point__grid--title">驚異のリピーター率</p>
                     <div class="point__grid--text">
-                        <p>徹底したプライバシーの保護！多くの著名人の引越しも担当しております。</p>
+                        <p>徹底したプライバシーの保護！多くの著名人の引越も担当しております。</p>
                     </div>
                 </div>
                 <div class="point__grid--item popup__text">
@@ -255,7 +255,7 @@
                     </div>
                     <p class="point__grid--title">実力派ベテランスタッフ</p>
                     <div class="point__grid--text">
-                        <p>スタッフは引越歴10年以上のプロ集団。安心・安全に引越し作業を行います！</p>
+                        <p>スタッフは引越歴10年以上のプロ集団。安心・安全に引越作業を行います！</p>
                     </div>
                 </div>
                 <div class="point__grid--item popup__text">
@@ -264,7 +264,7 @@
                     </div>
                     <p class="point__grid--title">整理収納アドバイザー</p>
                     <div class="point__grid--text">
-                        <p>引越しの際、整理収納の達人に作業を依頼することも可能です。</p>
+                        <p>引越の際、整理収納の達人に作業を依頼することも可能です。</p>
                     </div>
                 </div>
                 <div class="point__grid--item popup__text">
@@ -397,7 +397,7 @@
                     <div class="history__item right">
                         <img data-anime="is-visible" class="history__chara history__chara1 popup__text" src="./assets/images/about/about_history1.png" alt="">
                         <p class="history__item--year">2006<span class="small">年</span></p>
-                        <p class="histroy__item--text">「たかくら伝説」として、芸人活動を開始。芸人活動の傍ら、10年以上続けている引越しのアルバイトの経験を活かし、数多くの著名人の引越しを手伝う。</p>
+                        <p class="histroy__item--text">「たかくら伝説」として、芸人活動を開始。芸人活動の傍ら、10年以上続けている引越のアルバイトの経験を活かし、数多くの著名人の引越を手伝う。</p>
                     </div>
                     <div class="history__item left">
                         <img data-anime="is-visible" class="history__chara history__chara2 popup__text" src="./assets/images/about/about_history2.png" alt="">
