--- a/src/characters.html
+++ b/src/characters.html
@@ -502,9 +502,9 @@
             <img data-anime="is-visible" class="message__chara--img popup__text" src="./assets/images/message__chara.svg" alt="">
             <div class="message__inner">
                 <p class="message__text">たかくら引越センターの段ボールは、<br>
-                    「引越しを楽しんでもらいたい」<br class="sp-br">そんな思いで作りました。<br>
+                    「引越を楽しんでもらいたい」<br class="sp-br">そんな思いで作りました。<br>
                     新たな生活には、たくさんの出逢いや<br class="sp-br">発見があります。<br>
-                    アナタの新生活のためのお引越し、<br class="sp-br">全力でサポートします！</p>
+                    アナタの新生活のためのお引越、<br class="sp-br">全力でサポートします！</p>
                 <div class="more__btn--container">
                     <a class="more__btn" href="./estimate.html">無料お見積もり</a>
                 </div>
