--- a/src/estimate.html
+++ b/src/estimate.html
@@ -161,7 +161,7 @@
             </div>
             <div class="estimate__text">
                 <p>
-                予算の算出が難しかったり節約のため、<br class="sp-br">引越し業者に依頼せずに<br>
+                予算の算出が難しかったり節約のため、<br class="sp-br">引越業者に依頼せずに<br>
                 安く済まそうと思った結果、逆に予想以上に<br class="sp-br">かかってしまうこともあります。<br>
                 業者に頼むと高くつくのでは？<br class="sp-br">と心配なアナタへ。<br>
                 ぜひ一度、お見積もりフォーム<br class="sp-br">をご利用ください。
@@ -216,7 +216,7 @@
                 </div>
                 <div class="form__item">
                     <div class="form__label form__label--marginTop">
-                        <label for="name">お引越し希望日（第一希望）</label>
+                        <label for="name">お引越希望日（第一希望）</label>
                     </div>
                     <div class="form__area form__area--column">
                         <div class="form__content">
@@ -278,7 +278,7 @@
                 </div>
                 <div class="form__item">
                     <div class="form__label form__label--marginTop">
-                        <label for="name">お引越し希望日（第二希望）</label>
+                        <label for="name">お引越希望日（第二希望）</label>
                     </div>
                     <div class="form__area form__area--column">
                         <div class="form__content">
@@ -503,7 +503,7 @@
                 </div>
                 <div class="form__item">
                     <div class="form__label form__label--marginTop">
-                        <label for="name">お引越しされる人数</label>
+                        <label for="name">お引越される人数</label>
                     </div>
                     <div class="form__area form__area--column">
                         <div class="form__content">
@@ -523,7 +523,7 @@
                 </div>
                 <div class="form__item adress__item">
                     <div class="form__label form__label--marginTop">
-                        <label for="name">引越し先住所 <span class="asterisk">※</span></label>
+                        <label for="name">引越先住所 <span class="asterisk">※</span></label>
                     </div>
                     <div class="form__area form__area--column">
                         <div class="form__content form__flex"><span class="before__text">〒</span><input type="adress" class="form__input post__code" placeholder="000-0000"></div>
@@ -604,7 +604,7 @@
                 </div>
                 <div class="form__item">
                     <div class="form__label">
-                        <label for="name">引越し先住所について</label>
+                        <label for="name">引越先住所について</label>
                     </div>
                     <div class="form__area form__area--checkbox">
                         <div class="form__checkbox">
@@ -621,7 +621,7 @@
                 </div>
                 <div class="form__item">
                     <div class="form__label form__label--marginTop">
-                        <label for="name">引越し先の間取り</label>
+                        <label for="name">引越先の間取り</label>
                     </div>
                     <div class="form__area form__area--column">
                         <div class="form__content">
