--- a/src/index.html
+++ b/src/index.html
@@ -526,8 +526,8 @@
                     TMC(たかくら引越センター)は、<br />
                     東京23区均衡を中心に、<br class="sp-br" />千葉・神奈川・埼玉エリアを<br />
                     専門とした日本一小さな引越屋です。<br />
-                    引越し作業が楽しい！だけではなく、<br />
-                    引越しをすることで<br class="sp-br" />皆様の人生に変化をもたらせ、<br class="pc-br" />
+                    引越作業が楽しい！だけではなく、<br />
+                    引越をすることで<br class="sp-br" />皆様の人生に変化をもたらせ、<br class="pc-br" />
                     環境の変化が<br class="sp-br" />新たな出逢いや発見に繋がる・・・<br />
                     そんな願いを持って<br class="sp-br" />業務にあたっております。
                 </p>
@@ -556,7 +556,7 @@
             </div>
             <div class="service__column">
                 <div class="service__column--item">
-                    <p data-anime="popup" class="service__column--title">単身のお引越し</p>
+                    <p data-anime="popup" class="service__column--title">単身のお引越</p>
                     <div class="service__column--img">
                         <img data-anime="popup" class="service__column--chara" src="./assets/images/top/service/img-service_chara1.svg"
                             alt="" />
@@ -565,7 +565,7 @@
                     </div>
                 </div>
                 <div class="service__column--item bottom">
-                    <p data-anime="popup" class="service__column--title delay-time04">ご家族のお引越し</p>
+                    <p data-anime="popup" class="service__column--title delay-time04">ご家族のお引越</p>
                     <div class="service__column--img">
                         <img data-anime="popup" class="service__column--chara delay-time04" src="./assets/images/top/service/img-service_chara2.svg"
                             alt="" />
@@ -598,8 +598,8 @@
             </div>
         </section>
         <div class="scrolTextInner bg-yellow infinite__scroll">
-            <p class="scrolText">単身者からご家族まで都内の引越しはお任せください！単身者からご家族まで都内の引越しはお任せください！単身者からご家族まで都内の引越しはお任せください！</p>
-            <p class="scrolText">単身者からご家族まで都内の引越しはお任せください！単身者からご家族まで都内の引越しはお任せください！単身者からご家族まで都内の引越しはお任せください！</p>
+            <p class="scrolText">単身者からご家族まで都内の引越はお任せください！単身者からご家族まで都内の引越はお任せください！単身者からご家族まで都内の引越はお任せください！</p>
+            <p class="scrolText">単身者からご家族まで都内の引越はお任せください！単身者からご家族まで都内の引越はお任せください！単身者からご家族まで都内の引越はお任せください！</p>
         </div>
         <section class="secret">
             <div class="page__title--inner">
@@ -628,7 +628,7 @@
                                 <h4>すべての従業員が非喫煙者</h4>
                                 <!-- <img src="./assets/images/top/secret/img-secret_subtitle1.png" alt="" /> -->
                             </div>
-                            <p class="page__text">引越しの作業中または引越し終了後、荷物についたタバコの臭い気になりませんか？たかくら引越センターの作業員は、「完全禁煙」を徹底しております。
+                            <p class="page__text">引越の作業中または引越終了後、荷物についたタバコの臭い気になりませんか？たかくら引越センターの作業員は、「完全禁煙」を徹底しております。
                             </p>
                             <div class="more__btn--container">
                                 <a class="more__btn pinkBtn" href="./service.html">サービスについて</a>
@@ -649,14 +649,14 @@
                                 <p>02</p>
                             </div>
                             <div class="page__subtitle twoColumnTitle">
-                                <h4>整理収納の達人が<br class="sp-br tb-br">引越しをサポート</h4>
+                                <h4>整理収納の達人が<br class="sp-br tb-br">引越をサポート</h4>
                                 <!-- <picture>
                                     <source srcset="./assets/images/top/secret/img-secret_subtitle2-sp.png"
                                         media="(max-width: 767px)" />
                                     <img src="./assets/images/top/secret/img-secret_subtitle2.png" alt="" />
                                 </picture> -->
                             </div>
-                            <p class="page__text">芸人活動の傍ら20年以上引越しの仕事を続けている代表をはじめ、引越歴10年以上のベテランスタッフが作業を行います。</p>
+                            <p class="page__text">芸人活動の傍ら20年以上引越の仕事を続けている代表をはじめ、引越歴10年以上のベテランスタッフが作業を行います。</p>
                             <div class="more__btn--container">
                                 <a class="more__btn pinkBtn" href="./characters.html">従業員紹介はこちら</a>
                             </div>
@@ -683,7 +683,7 @@
                                     <img src="./assets/images/top/secret/img-secret_subtitle3.png" alt="" />
                                 </picture> -->
                             </div>
-                            <p class="page__text">「引越しを楽しんでほしい」そんな想いを込めて作った、積めば積むほどかわいいオリジナル段ボール。引越し後の活用法もご紹介しています！</p>
+                            <p class="page__text">「引越を楽しんでほしい」そんな想いを込めて作った、積めば積むほどかわいいオリジナル段ボール。引越後の活用法もご紹介しています！</p>
                             <div class="more__btn--container">
                                 <a class="more__btn pinkBtn" href="./service.html#introduction">さらに詳しく見る</a>
                             </div>
@@ -750,9 +750,9 @@
                 <div class="message__rightInner">
                     <div class="message__textArea">
                         <p class="page__text">
-                            引越しにあたり、予算の算出が難しい・・・<br />
-                            節約のため、引越し業者に依頼せずに<br />
-                            自分や友人と引越し作業を行う。<br />
+                            引越にあたり、予算の算出が難しい・・・<br />
+                            節約のため、引越業者に依頼せずに<br />
+                            自分や友人と引越作業を行う。<br />
                             荷物を運ぶためのトラックの手配や<br class="sp-br" />人員手配をする際、<br class="pc-br" />
                             友人に手伝ってもらう<br class="sp-br" />場合でも、食事や飲み物、<br />
                             謝礼を考えておかなければいけません。<br />
