--- a/src/service.html
+++ b/src/service.html
@@ -178,9 +178,9 @@
                         alt="" />
                 </div>
                 <div class="lower__textInner">
-                    <div data-anime="initial-slideVisible" class="lower__textInner--title PinkBg pcHide"><p><span>東京23区近郊の引越しは</span></p></div>
+                    <div data-anime="initial-slideVisible" class="lower__textInner--title PinkBg pcHide"><p><span>東京23区近郊の引越は</span></p></div>
                     <div data-anime="initial-slideVisible" class="lower__textInner--title PinkBg pcHide"><p><span>お任せを！信頼の引越業者</span></p></div>
-                    <div data-anime="initial-slideVisible" class="lower__textInner--title PinkBg spHide"><p><span>東京23区近郊の引越しはお任せを！</span></p></div>
+                    <div data-anime="initial-slideVisible" class="lower__textInner--title PinkBg spHide"><p><span>東京23区近郊の引越はお任せを！</span></p></div>
                     <div data-anime="initial-slideVisible" class="lower__textInner--title PinkBg spHide"><p><span>信頼の引越業者</span></p></div>
                     <p class="lower__textInner--text">当社は清潔をモットーに、<br class="sp-br">従業員すべてが非喫煙者！
                         <br>「引越はおもしろい！」<br class="sp-br">そんな風に感じていただけるような
@@ -210,11 +210,11 @@
                     <div class="point__column--speech">
                         <p>01</p>
                     </div>
-                    <p class="point__column--title">日本一小さな引越し屋</p>
+                    <p class="point__column--title">日本一小さな引越屋</p>
                     <div class="point__column--text">
-                        <p>東京23区近郊を中心とし、千葉・神奈川・埼玉エリアの引越しを対応しております。また、長距離や引越しに関するお悩み、相談も受け付けておりますので、お気軽にお問い合わせください。</p>
+                        <p>東京23区近郊を中心とし、千葉・神奈川・埼玉エリアの引越を対応しております。また、長距離や引越に関するお悩み、相談も受け付けておりますので、お気軽にお問い合わせください。</p>
                     </div>
-                    <!-- <p class="point__column--title">日本一小さな引越し屋</p>
+                    <!-- <p class="point__column--title">日本一小さな引越屋</p>
                     <div class="point__column--img">
                         <img class="point__column--chara" src="" alt="" />
                         <svg id="_レイヤー_2" data-name="レイヤー 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 348 348">
@@ -242,7 +242,7 @@
                         </svg>
                     </div>
                     <div class="point__column--text">
-                        <p>東京23区近郊を中心とし、千葉・神奈川・埼玉エリアの引越しを対応しております。また、長距離や引越しに関するお悩み、相談も受け付けておりますので、お気軽にお問い合わせください。</p>
+                        <p>東京23区近郊を中心とし、千葉・神奈川・埼玉エリアの引越を対応しております。また、長距離や引越に関するお悩み、相談も受け付けておりますので、お気軽にお問い合わせください。</p>
                     </div> -->
                 </div>
                 <div class="point__column--item bottom popup__text">
@@ -289,7 +289,7 @@
                     </div>
                     <p class="point__column--title">整理収納アドバイザー</p>
                     <div class="point__column--text">
-                        <p>引越し先が住みやすい居住空間になるよう、整理収納の達人（ハウスキーピング協会から整理収納アドバイザーに認定された作業員）が、整理収納のアドバイスをしながら作業を進めることが可能です。</p>
+                        <p>引越先が住みやすい居住空間になるよう、整理収納の達人（ハウスキーピング協会から整理収納アドバイザーに認定された作業員）が、整理収納のアドバイスをしながら作業を進めることが可能です。</p>
                     </div>
                     <!-- <p class="point__column--title">整理収納アドバイザー</p>
                     <div class="point__column--img">
@@ -319,7 +319,7 @@
                         </svg>
                     </div>
                     <div class="point__column--text">
-                        <p>引越し先が住みやすい居住空間になるよう、整理収納の達人（ハウスキーピング協会から整理収納アドバイザーに認定された作業員）が、整理収納のアドバイスをしながら作業を進めることが可能です。</p>
+                        <p>引越先が住みやすい居住空間になるよう、整理収納の達人（ハウスキーピング協会から整理収納アドバイザーに認定された作業員）が、整理収納のアドバイスをしながら作業を進めることが可能です。</p>
                     </div> -->
                 </div>
             </div>
@@ -401,7 +401,7 @@
             <div class="flow__inner">
                 <div class="flow__item">
                     <div data-anime="is-visible" class="flow__item--title">
-                        <p>引越しの前にまず準備</p>
+                        <p>引越の前にまず準備</p>
                     </div>
                     <div class="flow__item--slide js-slide--service js-slide-common">
                         <img src="./assets/images/service/flow_preparation1.jpg" alt="">
@@ -413,7 +413,7 @@
                 </div>
                 <div class="flow__item">
                     <div data-anime="is-visible" class="flow__item--title">
-                        <p>お引越し当日の流れ</p>
+                        <p>お引越当日の流れ</p>
                     </div>
                     <div class="flow__item--slide js-slide--service js-slide-common">
                         <img src="./assets/images/service/flow_currentDay1.jpg" alt="">
@@ -431,7 +431,7 @@
         </section>
         <section id="introduction" class="service__introduction">
             <div class="page__title--inner">
-                <p data-anime="is-visible" class="page__subTitle">引越しが楽しくなる！</p>
+                <p data-anime="is-visible" class="page__subTitle">引越が楽しくなる！</p>
                 <h2 class="page__title">
                     <span data-anime="is-visible" class="letter">こ</span><span data-anime="is-visible" class="letter">だ</span><span data-anime="is-visible" class="letter">わ</span><span data-anime="is-visible" class="letter">り</span><span data-anime="is-visible" class="letter">の</span><br class="sp-br"><span data-anime="is-visible" class="letter">段</span><span data-anime="is-visible" class="letter">ボ</span><span data-anime="is-visible" class="letter">ー</span><span data-anime="is-visible" class="letter">ル</span><span data-anime="is-visible" class="letter">紹</span><span data-anime="is-visible" class="letter">介</span>
                 </h2>
@@ -465,7 +465,7 @@
                     <div class="point__content">
                         <div class="point__content--inner">
                             <div data-anime="is-visible" class="popup__text"><p class="service__column--title"><span>うれしいPOINT</span></p></div>
-                            <h4 class="point__content--title">引越し後も活用できちゃう！</h4>
+                            <h4 class="point__content--title">引越後も活用できちゃう！</h4>
                             <svg class="point__content--line" viewBox="0 0 340 10">
                                 <line x1="-10" y1="0" x2="340" y2="0"/>
                             </svg>
@@ -484,9 +484,9 @@
             <img data-anime="is-visible" class="message__chara--img popup__text" src="./assets/images/message__chara.svg" alt="">
             <div class="message__inner">
                 <p class="message__text">たかくら引越センターの段ボールは、<br>
-                    「引越しを楽しんでもらいたい」<br class="sp-br">そんな思いで作りました。<br>
+                    「引越を楽しんでもらいたい」<br class="sp-br">そんな思いで作りました。<br>
                     新たな生活には、たくさんの出逢いや<br class="sp-br">発見があります。<br>
-                    アナタの新生活のためのお引越し、<br class="sp-br">全力でサポートします！</p>
+                    アナタの新生活のためのお引越、<br class="sp-br">全力でサポートします！</p>
                 <div class="more__btn--container">
                     <a class="more__btn" href="./estimate.html">無料お見積もり</a>
                 </div>
