--- a/src/single.html
+++ b/src/single.html
@@ -166,7 +166,7 @@
                     <img class="single__footer--img" src="./assets/images/news/single_footer.png" alt="たかくら引っ越しセンターロゴ">
                     <div class="single__footer--info">
                         <div class="single__footer--upper">
-                            <p>お引越しはたかくら引越センターへ！
+                            <p>お引越はたかくら引越センターへ！
                                 <br>合言葉は「引越はおもしろい！」</p>
                         </div>
                         <div class="single__footer--bottom">
