--- a/src/index.html
+++ b/src/index.html
@@ -809,11 +809,13 @@
             <div class="more__btn--container">
                 <a class="more__btn" href="https://tmc4514.com/shop/" target="_blank">すべて見る</a>
             </div>
-            <a href="https://store.line.me/stickershop/author/45105/ja" target="_blank" data-anime="is-visible" class="online__sale--img popup__text">
-                <div class="line__stamp--bg"><img src="./assets/images/top/online/line_stamp_bg.svg" alt="" /></div>
-                <div class="line__stamp--text"><img src="./assets/images/top/online/line_stamp_text.svg" alt="" /></div>
-                <div class="line__stamp--chara"><img src="./assets/images/top/online/line_stamp_chara.svg" alt="" /></div>
-                <!-- <img src="./assets/images/top/online/img-online_sale.svg" alt="" /> -->
+            <a href="https://store.line.me/stickershop/author/45105/ja" target="_blank" class="online__sale--img">
+                <div data-anime="is-visible" class="popup__text">
+                    <div class="line__stamp--bg"><img src="./assets/images/top/online/line_stamp_bg.svg" alt="" /></div>
+                    <div class="line__stamp--text"><img src="./assets/images/top/online/line_stamp_text.svg" alt="" /></div>
+                    <div class="line__stamp--chara"><img src="./assets/images/top/online/line_stamp_chara.svg" alt="" /></div>
+                    <!-- <img src="./assets/images/top/online/img-online_sale.svg" alt="" /> -->
+                </div>
             </a>
         </section>
         <section class="instagram">
