serviceの画像追加

--- a/src/about.html
+++ b/src/about.html
@@ -171,7 +171,7 @@
                     </h2>
                 </div>
                 <div class="lower__charaInner">
-                    <div data-anime="initial-popup" class="lower__chara--wrap"><img class="lower__chara--img1" src="./assets/images/about/about_main.svg" alt="" /></div>
+                    <div data-anime="initial-popup" class="lower__chara--wrap" style="opacity: 0;"><img class="lower__chara--img1" src="./assets/images/about/about_main.svg" alt="" /></div>
                     <div class="lower__chara--surround1"><img src="./assets/images/top/about/img-about_surround1.svg" alt="" /></div>
                     <div class="lower__chara--surround2"><img src="./assets/images/top/about/img-about_surround2.svg" alt="" /></div>
                     <img class="lower__pinkCircle first star03" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
