--- a/src/service.html
+++ b/src/service.html
@@ -161,7 +161,7 @@
                     </h2>
                 </div>
                 <div class="lower__charaInner">
-                    <div data-anime="initial-popup" class="lower__chara--wrap"><img class="lower__chara--img1" src="./assets/images/service/service_main.svg" alt="" /></div>
+                    <div data-anime="initial-popup" class="lower__chara--wrap" style="opacity: 0;"><img class="lower__chara--img1" src="./assets/images/service/service_main.svg" alt="" /></div>
                     <div class="lower__chara--surround1"><img src="./assets/images/top/about/img-about_surround1.svg" alt="" /></div>
                     <div class="lower__chara--surround2"><img src="./assets/images/top/about/img-about_surround2.svg" alt="" /></div>
                     <img class="lower__pinkCircle first star03" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
@@ -459,8 +459,12 @@
                 </div>
                 <div class="introduction__point">
                     <div class="point__img">
-                        <div data-anime="is-visible" class="popup__text"><p data-anime="is-visible" class="service__column--title_sp">うれしいPOINT</p></div>
-                        <img src="" alt="">
+                        <div data-anime="is-visible" class="popup__text" style="position: relative; z-index: 100;"><p data-anime="is-visible" class="service__column--title_sp">うれしいPOINT</p></div>
+                        <div class="point__slick">
+                            <img src="./assets/images/service/point_img01.jpg" alt="たかくらくんダンボール">
+                            <img src="./assets/images/service/point_img02.jpg" alt="たかくらくんダンボール">
+                            <img src="./assets/images/service/point_img03.jpg" alt="たかくらくんダンボール">
+                        </div>
                     </div>
                     <div class="point__content">
                         <div class="point__content--inner">
